@@ -1,6 +1,7 @@
 = ActiveMerchant CHANGELOG
 
 == HEAD
+* Clearhaus: update submission data format [bpollack] #3053
 * Make behavior of nil CC numbers more consistent [guaguasi] #3010
 * Moneris: Adds Credential on File logic [deedeelavinder] #3042
 * Adyen: Return AVS and CVC Result [nfarve] #3044
